--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
    <h3>welcome to our house me and a</h3> 
+   <h2>hello</h2>
+   <p>
+    Igu soo dhaweeye github saxipyal
+   </p>
 </body>
 </html>
