--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h3>welcome to our house me and a</h3> 
-   <h2>hello</h2>
+   <h2>hello i am sabirina mohamed ali</h2>
    <p>
     Igu soo dhaweeye github saxipyal
    </p>
