waan update gareeyay index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
    <h3>welcome to our house me and a</h3> 
    <h2>hello i am sabirina mohamed ali</h2>
+   <p>waxa aan try garen rabaa repository gaan</p>
    <p>
     Igu soo dhaweeye github saxipyal
    </p>
